--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <little>Consultório da Dr.Fortunato<title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
+    <body>
 
 <h1>Consultório da Dr.Fortunato</h1>
 <p>Aqui no consultório sempre será nossa prioridade do atendimento com os clientes para a melhoria a saúde das pessoas ne também seu bem entar<p>
 
+<p> O consultório foi fundado em 2023 no centro de Balsa Nova</p>
+
+<p> O consultório da Dr.Fortunato esta localizada no centro da cidade de Balsa Nova.</p>
+
+<p> Meu consultório quer o bem estar das pessoas e também os nossos clientes terá a mlhr experiência </p>
+
+<P> Também iremos oferecer profissionais nessa área para ue não aconteça erro com nenhuma saúde pessoal e a vida de uma pessoa.</P>
     
+</body>
+ <html>
