--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <P> Também iremos oferecer profissionais nessa área para ue não aconteça erro com nenhuma saúde pessoal e a vida de uma pessoa.</P>
 
 Nossa missão: <P>É melhoria de vida das pessoas <P>
-    
+<img scr="123.jpeg" alt=""
 </body>
- <html>
+ </head>
