--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <P> Também iremos oferecer profissionais nessa área para ue não aconteça erro com nenhuma saúde pessoal e a vida de uma pessoa.</P>
 
-Nossa missão: <P>É melhoria de vida das pessoas <P>
+Nossa missão: <P>É melhoria de vida das pessoas.html <P>
 <img scr="123.jpeg" alt=""
 </body>
  </head>
