--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 <P> Também iremos oferecer profissionais nessa área para ue não aconteça erro com nenhuma saúde pessoal e a vida de uma pessoa.</P>
 
 Nossa missão: <P>É melhoria de vida das pessoas.html <P>
+<center>
+
 <img scr="123.jpeg" alt=""
-</body>
-</html>
+ 
+
+</center>
+
+
