--- a/index.html
+++ b/index.html
@@ -11,19 +11,38 @@
 <h1>Consultório da Dr.Fortunato</h1>
 
 <p>Aqui no consultório sempre será nossa prioridade do atendimento com os clientes para a melhoria a saúde das pessoas ne também seu bem entar<p>
-
 <p> O consultório foi fundado em 2023 no centro de Balsa Nova</p>
-
 <p> Meu consultório quer o bem estar das pessoas e também os nossos clientes terá a mlhr experiência </p>
-
 <P> Também iremos oferecer profissionais nessa área para ue não aconteça erro com nenhuma saúde pessoal e a vida de uma pessoa.</P>
-
 Nossa missão: <P>É melhoria de vida das pessoas.html <P>
+
+
 <center>
 
-<img scr="123.jpeg" alt=""
+<img scr="123.jpeg" alt="Logo escito escritório de psicologia"
  
 
 </center>
 
+</body>
+</html>
 
+</P>Sobre a psicologia</P>
+</P> A psicologia é a área que estuda o comportamento e as questões que perpassam a vida do ser humano.</P>
+
+</p> Trata-se da ciêcia que visa compreender os sentimen tos, as emoções, as impressões e outras questões inerentes a uma pessoa.</P>
+
+</P> O psicólogo é o profissional responsável por se aprofundar nessa ciêcia.</p>
+
+</P> Torcer os dedos para trás; Segurar na faixa do adversário e projetá-lo de cabeça ao solo enquanto se defende de um Single Leg com a cabeça para fora; Suplex derrubando o adversário de cabeça ou pescoço ao solo; Cruzada de perna.</p>
+
+</P> A grade curricular da Psicologia é formada por disciplinas obrigatórias e optativas. No entanto, a base de estudos do aluno deverá estar de acordo com o que é definido pela Proposta de Diretrizes Curriculares do MEC.</P>
+
+<h1>Fundamentos da psicologia</h1>
+
+</p> Fundamentos epistemológicos e históricos;</p>
+</p>Fenômenos e processos psicológicos;</p>
+</p>Fundamentos metodológicos;</p>
+</p>Procedimentos para a investigação científica e profissional;</p>
+</P> Com campos afins do conhecimento;</P>
+</p>práticas profissionais.</p>
